@@ -113,4 +113,3 @@ display_version: yes
 // When affected with the "Hallucination" status effect, send the effect to client? (Note 1)
 // Note: Set to 'no' if the client lags due to the "Wavy" screen effect.
 display_hallucination: yes
-
