@@ -75,7 +75,7 @@ skill_out_range_consume: no
 
 // Does the distance between caster and target define if the skill is a ranged skill? (Note 4)
 // If set, when the distance between caster and target is greater than 3 the skill is considered long-range, otherwise it's a melee range.
-// If not set, then the range is determined by the skill (eg: Double Strafe is always long-ranged). 
+// If not set, then the range is determined by the skill's range (if it is above 5, the skill is ranged).
 // Default 14 (mobs + pets + homun)
 skillrange_by_distance: 14
 
@@ -240,7 +240,7 @@ max_heal_lv: 11
 // 8: Skill is usable on GvG grounds
 //16: Disable skill from "nowarpto" maps
 //    (it will work on GVG castles even if they are set to nowarpto, though)
-emergency_call: 31
+emergency_call: 11
 
 // Guild Aura Skills setting (add as appropiate).
 // (This affects GD_LEADERSHIP, GD_GLORYWOUNDS, GD_SOULCOLD and GD_HAWKEYES)
