@@ -122,7 +122,7 @@ backup_txt: save/athena_backup.txt
 friends_txt: save/friends.txt
 
 // Start point, Map name followed by coordinates (x,y)
-start_point: new_zone01.gat,53,111
+start_point: new_zone01,53,111
 
 // Starting weapon for new characters
 start_weapon: 1201
