@@ -30,4 +30,7 @@ ladmin_log_filename: log/ladmin.log
 // 3: 2004-12-31 23:59:59 (default)
 date_format: 3
 
+//If redirected output contains escape sequences (color codes)
+stdout_with_ansisequence: no
+
 import: conf/import/ladmin_conf.txt
