@@ -163,7 +163,8 @@ check_client_version: no
 // What version we would allow to connect? (if the options above is enabled..)
 client_version_to_connect: 20
 
-// Passwords in Login DB are MD5 - <passwordencrypt> cannot b used on client with this on
+// Store passwords as MD5 hashes instead of plaintext ?
+// NOTE: Will not work with clients that use <passwordencrypt>
 use_MD5_passwords: no
 
 // Ipban features (SQL only)
